<resources>
    <string name="app_name">Referee</string>
    <string name="navigation_menu_home">홈</string>
    <string name="navigation_menu_ingredient">식재료</string>
    <string name="navigation_menu_fridger">냉장고</string>
    <string name="navigation_menu_recipe">레시피</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
<!-- 식재료 화면  -->
    <string name="ingredient_name">식재료명</string>
    <string name="ingredient_unit">단위 : %s</string>
    <string name="ingredient_calory">단위당 열량 : %s kcal</string>
    <string name="ingredient_category">분류</string>
    <string name="ingredient_expiration">보관기한 : %d일 </string>
    <string name="ingredient_delete_title">식재료 삭제</string>
    <string name="ingredient_search_title">식재료 검색</string>
    <string name="ingredient_delete_success_toast">식재료 삭제에 성공하였습니다.</string>
    <string name="ingredient_delete_failed_toast">식재료 삭제에 실패하였습니다.</string>
    <string name="ingredient_delete_empty_toast">삭제할 식재료를 선택해주세요.</string>

<!-- 식재료 추가 화면 -->
    <string name="ingredient_add_title">식재료 추가</string>
    <string name="ingredient_edit_title">식재료 편집</string>
    <string name="ingredient_add_name">식재료명</string>
    <string name="ingredient_add_unit">단위</string>
    <string name="ingredient_add_photo">사진</string>
    <string name="ingredient_add_description">설명</string>
    <string name="ingredient_add_calory">칼로리</string>
    <string name="ingredient_add_expiration_date">유통기한(구입날짜로부터)</string>
    <string name="ingredient_add_photo_title">식재료 사진 추가</string>
    <string name="ingredient_add_photo_desc">식재료 사진을 추가하려면 아래 추가 방법을 선택해주세요.</string>
    <string name="ingredient_add_photo_camera">카메라</string>
    <string name="ingredient_add_photo_gallery">갤러리</string>
    <string name="ingredient_add_succeed_toast">식재료 저장에 성공했습니다.</string>
    <string name="ingredient_add_failed_toast">식재료 저장에 실패했습니다.</string>
    <string name="ingredient_update_succeed_toast">식재료 수정에 성공했습니다.</string>
    <string name="ingredient_update_failed_toast">식재료 수정에 실패했습니다.</string>
    <string name="ingredient_add_please_grant_permission_toast">권한 허용에 동의해주세요.</string>
    <string name="ingredient_add_please_input_name">식재료명을 입력해주세요.</string>
    <string name="ingredient_add_there_is_same_item_toast">중복된 이름의 식재료가 있습니다.</string>
    <string name="ingredients_empty">추가된 식재료가 없습니다.</string>
    <string-array name="ingredient_unit">
        <item>개</item>
        <item>묶음</item>
        <item>병</item>
        <item>봉투</item>
        <item>통</item>
        <item>g</item>
        <item>mg</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
    </string-array>

<!-- 냉장고 화면   -->
    <string name="fridge_empty_list">냉장고가 비었습니다.</string>
    <string name="fridge_ingredient_search_title">식재료 검색</string>
    <string name="fridge_ingredient_search_hint">식재료 이름을 입력하세요.</string>
    <string name="fridge_add_ingredient_to_fridge">냉장고에 추가하기</string>
    <string name="fridge_add_ingredient_success_toast">식재료를 냉장고에 추가하였습니다.</string>
    <string name="fridge_add_ingredient_failed_toast">식재료를 냉장고에 추가하는데에 실패했습니다.</string>

<!-- 레시피 화면  -->
    <string name="recipe_search_item">검색하려는 레시피를 입력해주세요.</string>
    <string name="recipe_search_title">레시피 검색</string>
    <string name="recipe_empty">레시피를 추천할 재료가 없습니다.\n냉장고에 재료를 추가해주세요.</string>
<!--  공통  -->
    <string name="search_keyword_is_empty">검색어를 입력해주세요.</string>
    <string name="search_empty_list_desc">검색된 결과가 없습니다.</string>
</resources>