<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvName"
            android:text="@string/ingredient_add_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/labelTextView" />

        <EditText
            android:id="@+id/etIngredientName"
            style="@style/inputEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            tools:text="식재료 이름" />

        <TextView
            android:id="@+id/tvImage"
            style="@style/labelTextView"
            android:text="@string/ingredient_add_photo"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIngredientName" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:padding="20dp"
            android:src="@drawable/thumbnail_food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImage" />

        <TextView
            android:id="@+id/tvUnit"
            style="@style/labelTextView"
            android:layout_marginTop="20dp"
            android:text="@string/ingredient_add_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_ingredients_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUnit" />

        <TextView
            android:id="@+id/tvExpiration"
            style="@style/labelTextView"
            android:layout_marginTop="20dp"
            android:text="@string/ingredient_add_expiration_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvUnits" />

        <Spinner
            android:id="@+id/spExpiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpiration" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_input_background"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="14dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>