<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/recyclerview_padding"
        android:background="@color/background_gray">

        <EditText
            android:id="@+id/etKeyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="@dimen/recyclerview_padding"
            android:background="@drawable/shape_edit_text_background_white"
            android:hint="@string/fridge_ingredient_search_hint"
            android:padding="10dp"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/recyclerview_padding"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/recyclerview_padding"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etKeyword">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchResults"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_search_ingredient"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvEmptyList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_empty_list_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etKeyword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>